--- a/helm-configs/otel-collector-values.yaml
+++ b/helm-configs/otel-collector-values.yaml
@@ -44,7 +44,7 @@ presets:
     enabled: false
   # Configures the Kubernetes Processor to add Kubernetes metadata.
   # Adds the k8sattributes processor to all the pipelines
-  # and adds the necessary rules to ClusteRole.
+  # and adds a preset of minimum required RBAC rules to ClusterRole.
   # Best used with mode = daemonset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-attributes-processor for details on the receiver.
   kubernetesAttributes:
@@ -57,13 +57,13 @@ presets:
     extractAllPodAnnotations: false
   # Configures the collector to collect node, pod, and container metrics from the API server on a kubelet..
   # Adds the kubeletstats receiver to the metrics pipeline
-  # and adds the necessary rules to ClusteRole.
+  # and adds the necessary rules to ClusterRole.
   # Best used with mode = daemonset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubeletstats-receiver for details on the receiver.
   kubeletMetrics:
     enabled: false
   # Configures the collector to collect kubernetes events.
-  # Adds the k8sobject receiver to the logs pipeline
+  # Adds the k8sobjects receiver to the logs pipeline
   # and collects kubernetes events by default.
   # Best used with mode = deployment or statefulset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-objects-receiver for details on the receiver.
@@ -71,7 +71,7 @@ presets:
     enabled: false
   # Configures the Kubernetes Cluster Receiver to collect cluster-level metrics.
   # Adds the k8s_cluster receiver to the metrics pipeline
-  # and adds the necessary rules to ClusteRole.
+  # and adds the necessary rules to ClusterRole.
   # Best used with mode = deployment or statefulset.
   # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-cluster-receiver for details on the receiver.
   clusterMetrics:
@@ -80,6 +80,46 @@ presets:
 configMap:
   # Specifies whether a configMap should be created (true by default)
   create: true
+  # Specifies an existing ConfigMap to be mounted to the pod
+  # The ConfigMap MUST include the collector configuration via a key named 'relay' or the collector will not start.
+  # This also supports template content, which will eventually be converted to yaml.
+  existingName: ""
+  # Specifies the relative path to custom ConfigMap template file. This option SHOULD be used when bundling a custom
+  # ConfigMap template, as it enables pod restart via a template checksum annotation.
+  # existingPath: ""
+
+
+# When enabled, the chart will configure the collector to emit its traces, metrics, and logs over http via the OTLP using the Otel Go SDK.
+# If internalTelemetryViaOTLP.metrics.enabled Ithe chart will remove the default prometheus receiver (which was configured to scrape the Collector's metrics)
+# and the service.telemetry.metrics.address value.
+# Learn more about the Collector telemetry at https://opentelemetry.io/docs/collector/internal-telemetry/.
+#
+# THIS OPTION IS EXPERIMENTAL AND SUBJECT TO BREAKING CHANGES
+internalTelemetryViaOTLP:
+  # The endpoint where the telemetry will be exported
+  endpoint: ""
+  # Optional headers to configure the exporters
+  headers: []
+    # - name: "x-dest-auth"
+    #   value: "some auth key"
+  traces:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for traces
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for traces
+    headers: []
+  metrics:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for metrics
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for metrics
+    headers: []
+  logs:
+    enabled: false
+    # overrides internalTelemetryViaOTLP.endpoint for logs
+    endpoint: ""
+    # overrides internalTelemetryViaOTLP.headers for logs
+    headers: []
 
 # Base collector configuration.
 # Supports templating. To escape existing instances of {{ }}, use {{` <original content> `}}.
@@ -98,11 +138,8 @@ config:
     # The health_check extension can be modified, but should never be removed.
     health_check:
       endpoint: ${env:MY_POD_IP}:13133
-    memory_ballast: {}
   processors:
     batch: {}
-    # If set to null, will be overridden with values based on k8s resource limits
-    memory_limiter: null
     tail_sampling:
       decision_wait: 10s
       num_traces: 50000
@@ -121,14 +158,6 @@ config:
           },
         ]
   receivers:
-    #jaeger:
-    #  protocols:
-    #    grpc:
-    #      endpoint: ${env:MY_POD_IP}:14250
-    #    thrift_http:
-    #      endpoint: ${env:MY_POD_IP}:14268
-    #    thrift_compact:
-    #      endpoint: ${env:MY_POD_IP}:6831
     otlp:
       protocols:
         grpc:
@@ -138,27 +167,47 @@ config:
   service:
     telemetry:
       metrics:
-        address: ${env:MY_POD_IP}:8888
+        readers:
+          - pull:
+              exporter:
+                prometheus:
+                  host: ${env:MY_POD_IP}
+                  port: 8888
     extensions:
       - health_check
-      - memory_ballast
     pipelines:
       traces:
         exporters:
           - otlp/jaeger
         processors:
-          - memory_limiter
           - batch
           - tail_sampling
         receivers:
           - otlp
+
+# Helm currently has an issue (https://github.com/helm/helm/pull/12879) when using null to remove
+# default configuration from a subchart. The result is that you cannot remove default configuration
+# from `config`, such as a specific recevier or a specific pipeline, when the chart is used as a
+# subchart.
+#
+# Until the helm bug is fixed, this field is provided as an alternative when using this chart as a subchart.
+# It is not recommended to use this field when installing the chart directly.
+#
+# When not empty, `alternateConfig` will be used to set the collector's configuration. It has NO default
+# values and IS NOT MERGED with config. Any configuration provided via `config` will be ignored when
+# `alternateConfig` is set. You MUST provide your own collector configuration.
+#
+# Reminder that the healthcheck extension (or something else that provides the same functionality) is required.
+#
+# Components configured by presets will be injected in the same way they are for `config`.
+alternateConfig: {}
 
 image:
   # If you want to use the core image `otel/opentelemetry-collector`, you also need to change `command.name` value to `otelcol`.
   repository: "otel/opentelemetry-collector-contrib"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
   # When digest is set to a non-empty value, images will be pulled by digest (regardless of tag value).
   digest: ""
 imagePullSecrets: []
@@ -225,8 +274,14 @@ priorityClassName: ""
 
 extraEnvs: []
 extraEnvsFrom: []
+# This also supports template content, which will eventually be converted to yaml.
 extraVolumes: []
+
+# This also supports template content, which will eventually be converted to yaml.
 extraVolumeMounts: []
+
+# This also supports template content, which will eventually be converted to yaml.
+extraManifests: []
 
 # Configuration for ports
 # nodePort is also allowed
@@ -252,7 +307,7 @@ ports:
     hostPort: 6831
     protocol: UDP
   jaeger-thrift:
-    enabled: false
+    enabled: true
     containerPort: 14268
     servicePort: 14268
     hostPort: 14268
@@ -277,7 +332,13 @@ ports:
     servicePort: 8888
     protocol: TCP
 
-# Resource limits & requests. Update according to your own use case as these values might be too low for a typical deployment.
+# When enabled, the chart will set the GOMEMLIMIT env var to 80% of the configured resources.limits.memory.
+# If no resources.limits.memory are defined then enabling does nothing.
+# It is HIGHLY recommend to enable this setting and set a value for resources.limits.memory.
+useGOMEMLIMIT: true
+
+# Resource limits & requests.
+# It is HIGHLY recommended to set resource limits.
 resources:
   limits:
     cpu: 256m
@@ -309,6 +370,9 @@ dnsPolicy: ""
 
 # Custom DNS config. Required when DNS policy is None.
 dnsConfig: {}
+
+# Custom kube scheduler name.
+schedulerName: ""
 
 # only used with deployment mode
 replicaCount: 1
@@ -403,6 +467,24 @@ readinessProbe:
     port: 13133
     path: /
 
+# startup probe configuration
+# Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+##
+startupProbe: {}
+  # Number of seconds after the container has started before startup probes are initiated.
+  # initialDelaySeconds: 1
+  # How often in seconds to perform the probe.
+  # periodSeconds: 10
+  # Number of seconds after which the probe times out.
+  # timeoutSeconds: 1
+  # Minimum consecutive failures for the probe to be considered failed after having succeeded.
+  # failureThreshold: 1
+  # Duration in seconds the pod needs to terminate gracefully upon probe failure.
+  # terminationGracePeriodSeconds: 10
+  # httpGet:
+  #   port: 13133
+  #   path: /
+
 service:
   # Enable the creation of a Service.
   # By default, it's enabled on mode != daemonset.
@@ -482,6 +564,10 @@ serviceMonitor:
   # additional labels for the ServiceMonitor
   extraLabels: {}
   #  release: kube-prometheus-stack
+  # Used to set relabeling and metricRelabeling configs on the ServiceMonitor
+  # https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+  relabelings: []
+  metricRelabelings: []
 
 # PodDisruptionBudget is used only if deployment enabled
 podDisruptionBudget:
@@ -577,10 +663,5 @@ networkPolicy:
   #      - port: 1234
   #        protocol: TCP
 
-# When enabled, the chart will set the GOMEMLIMIT env var to 80% of the configured
-# resources.limits.memory and remove the memory ballast extension.
-# If no resources.limits.memory are defined enabling does nothing.
-# In a future release this setting will be enabled by default.
-# See https://github.com/open-telemetry/opentelemetry-helm-charts/issues/891
-# for more details.
-useGOMEMLIMIT: true
+# Allow containers to share processes across pod namespace
+shareProcessNamespace: false
